--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,6 @@
-@import "./_resets";
-@import "./_fonts";
-@import "./_config";
+@import './_resets';
+@import './_fonts';
+@import './_config';
 
 html {
   box-sizing: border-box;
@@ -13,7 +13,7 @@ html {
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   background-color: $primary-color;
 }
 
@@ -42,7 +42,6 @@ body {
 }
 
 .hide {
-  // visibility: hidden;
   opacity: 0;
 }
 
@@ -50,7 +49,7 @@ body {
 .header {
   left: 100px;
   position: relative;
-  margin-top: -42px;
+  margin-top: -66px;
 
   &__wrapper {
     display: flex;
@@ -67,11 +66,11 @@ body {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    padding-top: 48px;
+    padding-top: 72px;
 
     &-img {
       position: absolute;
-      top: 42px;
+      top: 66px;
       left: -725px;
       z-index: -2;
     }
@@ -115,7 +114,7 @@ body {
   }
 
   &__content {
-    margin-top: 58px;
+    margin-top: 34px;
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
@@ -130,7 +129,7 @@ body {
 
       &-legs {
         position: absolute;
-        top: -190px;
+        top: -192px;
         left: -354px;
         z-index: 1;
       }
@@ -138,7 +137,7 @@ body {
 
     .block__img::before,
     .block__img::after {
-      content: "299 ₽";
+      content: '299 ₽';
       position: relative;
 
       width: 100px;
@@ -186,7 +185,7 @@ body {
             }
             &-orange::after,
             &-green::after {
-              content: "";
+              content: '';
               position: absolute;
               bottom: 0;
               left: 0;
@@ -254,7 +253,7 @@ body {
               }
               &-orange::after,
               &-green::after {
-                content: "";
+                content: '';
                 position: absolute;
                 bottom: 1px;
                 left: 0;
@@ -295,7 +294,7 @@ body {
       display: flex;
       flex-direction: column;
       align-items: center;
-
+      z-index: 1;
       animation-duration: 5s;
       animation-name: visible;
 
@@ -366,7 +365,7 @@ body {
           }
 
           &-lg::after {
-            content: "";
+            content: '';
             position: absolute;
             width: 100px;
             height: 100px;
@@ -584,7 +583,7 @@ main {
 
     &-info::before {
       position: absolute;
-      content: "";
+      content: '';
       width: 50px;
       height: 3px;
       background-color: #becbd8;
@@ -594,7 +593,7 @@ main {
   }
 
   .item__example::after {
-    content: "";
+    content: '';
     text-align: center;
     line-height: 50px;
     font-size: 30px;
@@ -609,15 +608,15 @@ main {
   }
   .example {
     &-first::after {
-      content: "1";
+      content: '1';
       background: #ec9a6a;
     }
     &-second::after {
-      content: "2";
+      content: '2';
       background: #e47643;
     }
     &-third::after {
-      content: "3";
+      content: '3';
       background: #ec5b19;
     }
   }
@@ -640,7 +639,7 @@ main {
   }
 
   &-statistics::after {
-    content: "";
+    content: '';
     position: absolute;
     width: 170px;
     height: 37px;
@@ -701,7 +700,7 @@ main {
 
       &::before {
         position: absolute;
-        content: "";
+        content: '';
         width: 100%;
         border-bottom: 5px solid $green-color;
         border-radius: 10px 10px 0 0;
@@ -710,7 +709,7 @@ main {
       }
       &::after {
         position: absolute;
-        content: "";
+        content: '';
         width: 100px;
         height: 100px;
         border-radius: 50px;
@@ -794,7 +793,7 @@ main {
   }
 
   &-statistics::after {
-    content: "ВЫВОД:";
+    content: 'ВЫВОД:';
     color: #000000;
     font-size: 22px;
     font-weight: 700;
@@ -807,7 +806,7 @@ main {
     left: 43%;
   }
   &-statistics::before {
-    content: "!";
+    content: '!';
     color: #f4d3bb;
     font-size: 70px;
     font-weight: 700;
@@ -906,7 +905,7 @@ main {
     }
     .block__item::before {
       position: absolute;
-      content: "";
+      content: '';
       width: 108px;
       height: 54px;
       border: 4px solid #f64d01;
@@ -918,7 +917,7 @@ main {
     }
     .block__item::after {
       position: absolute;
-      content: "";
+      content: '';
       width: 104px;
       height: 104px;
       border-radius: 50%;
@@ -1062,7 +1061,7 @@ main {
         }
         &-text::before {
           position: absolute;
-          content: "";
+          content: '';
           width: 20px;
           height: 3px;
           background-color: #7bbf1c;
@@ -1076,4 +1075,4 @@ main {
 
 /* FOOTER end*/
 
-@import "./_mobile";
+@import './_mobile';
