--- a/src/css/main.css
+++ b/src/css/main.css
@@ -455,6 +455,61 @@ textarea {
 
 /* Variables start */
 /* Variables end */
+@-webkit-keyframes visible {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+@keyframes visible {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+
+@-webkit-keyframes rotation {
+  from {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg); }
+  to {
+    -webkit-transform: rotate(359deg);
+            transform: rotate(359deg); } }
+
+@keyframes rotation {
+  from {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg); }
+  to {
+    -webkit-transform: rotate(359deg);
+            transform: rotate(359deg); } }
+
+@-webkit-keyframes tremor {
+  0%,
+  25% {
+    left: -1px;
+    top: -1px;
+    -webkit-transform: translateX(-4%);
+    transform: translateX(-4%); }
+  50%,
+  100% {
+    left: 1px;
+    top: 1px;
+    -webkit-transform: translateX(4%);
+    transform: translateX(4%); } }
+
+@keyframes tremor {
+  0%,
+  25% {
+    left: -1px;
+    top: -1px;
+    -webkit-transform: translateX(-4%);
+    transform: translateX(-4%); }
+  50%,
+  100% {
+    left: 1px;
+    top: 1px;
+    -webkit-transform: translateX(4%);
+    transform: translateX(4%); } }
+
 html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box; }
@@ -476,8 +531,8 @@ body {
   overflow: hidden; }
 
 .wrapper-bg {
-  background: -o-linear-gradient(340deg, rgba(243, 249, 255, 0.5) 0%, rgba(243, 249, 255, 0.95) 50%, #f3f9ff 100%);
-  background: linear-gradient(110deg, rgba(243, 249, 255, 0.5) 0%, rgba(243, 249, 255, 0.95) 50%, #f3f9ff 100%);
+  background: -o-linear-gradient(340deg, rgba(236, 244, 251, 0.5) 0%, rgba(236, 244, 251, 0.95) 50%, #ecf4fb 100%);
+  background: linear-gradient(110deg, rgba(236, 244, 251, 0.5) 0%, rgba(236, 244, 251, 0.95) 50%, #ecf4fb 100%);
   position: relative; }
 
 .img-wave-top {
@@ -671,6 +726,12 @@ body {
         -webkit-align-items: center;
             -ms-flex-align: center;
                 align-items: center; }
+        .header__content .description__list .description__item:hover .description__item-icon {
+          -webkit-box-shadow: 0 0 10px #ff6b00;
+                  box-shadow: 0 0 10px #ff6b00;
+          -webkit-transition: ease all 0.5s;
+          -o-transition: ease all 0.5s;
+          transition: ease all 0.5s; }
         .header__content .description__list .description__item-icon {
           width: 60px;
           height: 60px;
@@ -716,18 +777,6 @@ body {
           .header__content .description__list .description__item-text .text-underline-green::after {
             width: 44px;
             background-color: #a7c93d; }
-
-@-webkit-keyframes visible {
-  from {
-    opacity: 0; }
-  to {
-    opacity: 1; } }
-
-@keyframes visible {
-  from {
-    opacity: 0; }
-  to {
-    opacity: 1; } }
     .header__content .form {
       width: 270px;
       height: 553px;
@@ -769,7 +818,7 @@ body {
         border-right: 7px solid #a7c93d;
         border-bottom: 7px solid #a7c93d;
         border-radius: 7px;
-        background: rgba(243, 249, 255, 0.95);
+        background: rgba(236, 244, 251, 0.95);
         top: -7px;
         text-align: center; }
         .header__content .form__free-text {
@@ -858,6 +907,17 @@ body {
       .header__content .form .button {
         margin-top: 15px;
         border-radius: 32px; }
+        .header__content .form .button:hover {
+          color: #ff6b00;
+          -webkit-box-shadow: 0 0 10px #a7c93d;
+                  box-shadow: 0 0 10px #a7c93d;
+          -webkit-transition: ease all 0.5s;
+          -o-transition: ease all 0.5s;
+          transition: ease all 0.5s; }
+        .header__content .form .button__title:hover {
+          border: 2px solid rgba(167, 201, 61, 0.4);
+          -webkit-box-shadow: 0 0 5px #a7c93d;
+                  box-shadow: 0 0 5px #a7c93d; }
       .header__content .form .button,
       .header__content .form .button__title {
         background-color: #a8ca3f;
@@ -897,8 +957,6 @@ body {
           .header__content .form .button__title__title-sm {
             font-size: 16px;
             line-height: 16px; }
-      .header__content .form .button:hover {
-        color: red; }
       .header__content .form__discount {
         font-size: 18px;
         font-weight: 400;
@@ -948,7 +1006,8 @@ main {
   margin: auto; }
 
 .main__about,
-.main__info1 {
+.main__info1,
+footer {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -959,17 +1018,40 @@ main {
       -ms-flex-direction: column;
           flex-direction: column; }
   .main__about .brand-icon,
-  .main__info1 .brand-icon {
+  .main__info1 .brand-icon,
+  footer .brand-icon {
     width: 92px;
     height: 65px;
     -webkit-align-self: center;
         -ms-flex-item-align: center;
-            align-self: center; }
+            align-self: center;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex; }
+    .main__about .brand-icon_big,
+    .main__info1 .brand-icon_big,
+    footer .brand-icon_big {
+      width: 60px;
+      height: 60px;
+      -webkit-animation: rotation 8s infinite linear;
+              animation: rotation 8s infinite linear; }
+    .main__about .brand-icon_small,
+    .main__info1 .brand-icon_small,
+    footer .brand-icon_small {
+      width: 32px;
+      height: 32px;
+      -webkit-align-self: flex-end;
+          -ms-flex-item-align: end;
+              align-self: flex-end;
+      animation: rotation 8s infinite reverse linear; }
   .main__about-title,
-  .main__info1-title {
+  .main__info1-title,
+  footer-title {
     text-align: center; }
     .main__about-title-lg,
-    .main__info1-title-lg {
+    .main__info1-title-lg,
+    footer-title-lg {
       font-size: 48px;
       font-weight: 900;
       line-height: 48px;
@@ -977,7 +1059,8 @@ main {
       margin-top: 18px;
       margin-bottom: 36px; }
     .main__about-title-sm,
-    .main__info1-title-sm {
+    .main__info1-title-sm,
+    footer-title-sm {
       font-size: 24px;
       font-weight: 700;
       line-height: 28px;
@@ -995,7 +1078,10 @@ main {
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
-          justify-content: space-between; }
+          justify-content: space-between;
+  -webkit-transition: ease all 0.5s;
+  -o-transition: ease all 0.5s;
+  transition: ease all 0.5s; }
   .main__about-block .block__item {
     display: -webkit-box;
     display: -webkit-flex;
@@ -1042,6 +1128,28 @@ main {
     top: -19px;
     left: 0; }
 
+.main__about .item__example:hover img {
+  -webkit-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+          transform: scale(1.1);
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s; }
+
+.main__about .item__example:hover::after {
+  top: -5px;
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s; }
+
+.main__about .item__example-info::before {
+  -webkit-transition: width 3s linear;
+  -o-transition: width 3s linear;
+  transition: width 3s linear; }
+
+.main__about .item__example-info:hover::before {
+  width: 100%; }
+
 .main__about .item__example::after {
   content: '';
   text-align: center;
@@ -1052,8 +1160,8 @@ main {
   position: absolute;
   width: 50px;
   height: 50px;
-  top: 0;
-  right: 160px;
+  top: 4px;
+  right: 155px;
   border-radius: 50%; }
 
 .main__about .example-first::after {
@@ -1137,6 +1245,10 @@ main {
       text-align: center;
       position: relative;
       border-radius: 10px; }
+      .main__info1-block .block__item:hover {
+        top: -2px;
+        -webkit-box-shadow: 0 5px 10px #a7c93d;
+                box-shadow: 0 5px 10px #a7c93d; }
       .main__info1-block .block__item::before {
         position: absolute;
         content: '';
@@ -1257,7 +1369,9 @@ main {
             align-self: center;
     margin-bottom: 20px;
     margin-top: 65px;
-    z-index: 1; }
+    z-index: 1;
+    -webkit-animation: rotation 8s infinite linear;
+            animation: rotation 8s infinite linear; }
   .main__why-title-lg, .main__why-title-sm {
     text-align: center; }
   .main__why-title-lg {
@@ -1296,6 +1410,18 @@ main {
       padding: 85px 31px 36px 31px;
       margin-top: 35px;
       margin-bottom: 32px; }
+      .main__why-block .block__item:hover {
+        -webkit-box-shadow: 0 5px 10px #f64d01;
+                box-shadow: 0 5px 10px #f64d01;
+        top: -2px;
+        -webkit-transition: 0.3s;
+        -o-transition: 0.3s;
+        transition: 0.3s; }
+        .main__why-block .block__item:hover::after {
+          height: 110px;
+          -webkit-transition: 0.6s;
+          -o-transition: 0.6s;
+          transition: 0.6s; }
       .main__why-block .block__item-title {
         color: #000000;
         font-size: 24px;
@@ -1318,7 +1444,7 @@ main {
       width: 108px;
       height: 54px;
       border: 4px solid #f64d01;
-      border-top: 6px solid white;
+      border-top: 6px solid #fff;
       border-radius: 0 0 50% 50% / 0 0 100% 100%;
       background: #fff;
       top: -4px;
@@ -1331,6 +1457,16 @@ main {
       border-radius: 50%;
       top: -70px;
       left: 130px; }
+    .item:hover .main__why-block-first::after {
+      top: -90px; }
+    .main__why-block .item-third,
+    .main__why-block .item-third::before {
+      border: 4px solid #62bd1f; }
+    .main__why-block .item-third:hover {
+      -webkit-box-shadow: 0 5px 10px #62bd1f;
+              box-shadow: 0 5px 10px #62bd1f; }
+      .main__why-block .item-third:hover ::after {
+        top: 0; }
     .main__why-block .item-first::after {
       background: #fff url(../img/main/cream-pic.png) no-repeat center center; }
     .main__why-block .item-second::after {
@@ -1424,6 +1560,11 @@ main {
       -webkit-align-items: center;
           -ms-flex-align: center;
               align-items: center; }
+      .footer__block-content .content__item:hover .content__item-pic {
+        border: 15px solid #f64d01;
+        -webkit-transition: ease all 0.5s;
+        -o-transition: ease all 0.5s;
+        transition: ease all 0.5s; }
       .footer__block-content .content__item-pic {
         display: block;
         width: 119px;
@@ -1461,8 +1602,8 @@ main {
 @media screen and (min-width: 320px) and (max-width: 1170px) {
   .wrapper-bg {
     position: relative;
-    background: -o-linear-gradient(340deg, rgba(243, 249, 255, 0.5) 0%, rgba(243, 249, 255, 0.95) 50%, #f3f9ff 60%, #f3f9ff 100%);
-    background: linear-gradient(110deg, rgba(243, 249, 255, 0.5) 0%, rgba(243, 249, 255, 0.95) 50%, #f3f9ff 60%, #f3f9ff 100%); }
+    background: -o-linear-gradient(340deg, rgba(236, 244, 251, 0.5) 0%, rgba(236, 244, 251, 0.95) 50%, #ecf4fb 60%, #ecf4fb 100%);
+    background: linear-gradient(110deg, rgba(236, 244, 251, 0.5) 0%, rgba(236, 244, 251, 0.95) 50%, #ecf4fb 60%, #ecf4fb 100%); }
     .wrapper-bg .img-wave-top {
       width: auto;
       height: auto;
