--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -1,9 +1,10 @@
 /* Variables start */
 
 $primary-color: #e2e2e2 !default;
-$secondary-color: #f3f9ff;
+$secondary-color: #ecf4fb;
 $green-color: #a7c93d;
 $orange-color: #ff6b00;
+$lite-red-color: #f64d01;
 $show-background-image: true;
 $top-background-image: url(../img/top-background-img.png);
 $bottom-background-image: url(../img/bottom-background-image.png);
@@ -22,5 +23,45 @@ $background-opacity: 0.5;
 @mixin mediaMd {
   @media screen and (min-width: 501px) and (max-width: 1170px) {
     @content;
+  }
+}
+
+@mixin ease {
+  transition: ease all 0.5s;
+}
+
+@keyframes visible {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
+}
+
+@keyframes tremor {
+  0%,
+  25% {
+    left: -1px;
+    top: -1px;
+    -webkit-transform: translateX(-4%);
+    transform: translateX(-4%);
+  }
+  50%,
+  100% {
+    left: 1px;
+    top: 1px;
+    -webkit-transform: translateX(4%);
+    transform: translateX(4%);
   }
 }
