--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -209,6 +209,13 @@ body {
           justify-content: flex-start;
           align-items: center;
 
+          &:hover {
+            .description__item-icon {
+              box-shadow: 0 0 10px $orange-color;
+              @include ease;
+            }
+          }
+
           &-icon {
             width: 60px;
             height: 60px;
@@ -268,16 +275,6 @@ body {
             }
           }
         }
-      }
-    }
-
-    @keyframes visible {
-      from {
-        opacity: 0;
-      }
-
-      to {
-        opacity: 1;
       }
     }
 
@@ -426,6 +423,15 @@ body {
       .button {
         margin-top: 15px;
         border-radius: 32px;
+        &:hover {
+          color: $orange-color;
+          box-shadow: 0 0 10px $green-color;
+          @include ease;
+        }
+        &__title:hover {
+          border: 2px solid rgba($green-color, 0.4);
+          box-shadow: 0 0 5px $green-color;
+        }
       }
 
       .button,
@@ -456,9 +462,6 @@ body {
         }
       }
 
-      .button:hover {
-        color: red;
-      }
       &__discount {
         font-size: 18px;
         font-weight: 400;
@@ -514,7 +517,8 @@ main {
 }
 
 .main__about,
-.main__info1 {
+.main__info1,
+footer {
   display: flex;
   flex-direction: column;
 
@@ -522,7 +526,21 @@ main {
     width: 92px;
     height: 65px;
     align-self: center;
+    display: flex;
+
+    &_big {
+      width: 60px;
+      height: 60px;
+      animation: rotation 8s infinite linear;
+    }
+    &_small {
+      width: 32px;
+      height: 32px;
+      align-self: flex-end;
+      animation: rotation 8s infinite reverse linear;
+    }
   }
+
   &-title {
     text-align: center;
     &-lg {
@@ -548,6 +566,7 @@ main {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    @include ease;
 
     .block__item {
       display: flex;
@@ -592,6 +611,26 @@ main {
     }
   }
 
+  .item__example:hover {
+    img {
+      transform: scale(1.1);
+      transition: 0.5s;
+    }
+    &::after {
+      top: -5px;
+      transition: 0.5s;
+    }
+  }
+
+  .item__example-info::before {
+    transition: width 3s linear;
+  }
+  .item__example-info:hover {
+    &::before {
+      width: 100%;
+    }
+  }
+
   .item__example::after {
     content: '';
     text-align: center;
@@ -602,8 +641,8 @@ main {
     position: absolute;
     width: 50px;
     height: 50px;
-    top: 0;
-    right: 160px;
+    top: 4px;
+    right: 155px;
     border-radius: 50%;
   }
   .example {
@@ -697,6 +736,10 @@ main {
       text-align: center;
       position: relative;
       border-radius: 10px;
+      &:hover {
+        top: -2px;
+        box-shadow: 0 5px 10px $green-color;
+      }
 
       &::before {
         position: absolute;
@@ -838,6 +881,7 @@ main {
     margin-bottom: 20px;
     margin-top: 65px;
     z-index: 1;
+    animation: rotation 8s infinite linear;
   }
 
   &-title {
@@ -874,12 +918,22 @@ main {
     .block__item {
       position: relative;
       width: 370px;
-      border: 4px solid #f64d01;
+      border: 4px solid $lite-red-color;
       border-radius: 10px;
       text-align: center;
       padding: 85px 31px 36px 31px;
       margin-top: 35px;
       margin-bottom: 32px;
+
+      &:hover {
+        box-shadow: 0 5px 10px $lite-red-color;
+        top: -2px;
+        transition: 0.3s;
+        &::after {
+          height: 110px;
+          transition: 0.6s;
+        }
+      }
 
       &-title {
         color: #000000;
@@ -903,13 +957,14 @@ main {
         }
       }
     }
+
     .block__item::before {
       position: absolute;
       content: '';
       width: 108px;
       height: 54px;
-      border: 4px solid #f64d01;
-      border-top: 6px solid white;
+      border: 4px solid $lite-red-color;
+      border-top: 6px solid #fff;
       border-radius: 0 0 50% 50% / 0 0 100% 100%;
       background: #fff;
       top: -4px;
@@ -923,6 +978,22 @@ main {
       border-radius: 50%;
       top: -70px;
       left: 130px;
+    }
+    .item:hover &-first::after {
+      top: -90px;
+    }
+
+    .item-third,
+    .item-third::before {
+      border: 4px solid #62bd1f;
+    }
+
+    .item-third:hover {
+      box-shadow: 0 5px 10px #62bd1f;
+
+      ::after {
+        top: 0;
+      }
     }
 
     .item {
@@ -941,7 +1012,7 @@ main {
   }
   &__color-wrapper {
     padding: 4px;
-    background: linear-gradient(to right, #f64d01, #62bd1f);
+    background: linear-gradient(to right, $lite-red-color, #62bd1f);
     border-radius: 10px;
     .main__why-meaning {
       padding: 33px 30px 31px 25px;
@@ -953,7 +1024,7 @@ main {
         font-weight: 500;
         line-height: 26.52px;
         .colored {
-          color: #f64d01;
+          color: $lite-red-color;
         }
       }
     }
@@ -1024,12 +1095,19 @@ main {
         justify-content: center;
         align-items: center;
 
+        &:hover {
+          .content__item-pic {
+            border: 15px solid $lite-red-color;
+            @include ease;
+          }
+        }
+
         &-pic {
           display: block;
           width: 119px;
           height: 119px;
           border-radius: 50%;
-          border: 7px solid #f64d01;
+          border: 7px solid $lite-red-color;
           box-shadow: 0 0 0 8px rgba(#e5d0b9, 0.5);
           margin-right: 28px;
           margin-bottom: 30px;
